--- a/app/globals.css
+++ b/app/globals.css
@@ -4,7 +4,7 @@
 
 @font-face {
   font-family: 'PP Migra';
-  src: url('/fonts/dd4c3ed54f9a74fa-s.p.woff2') format('woff2');
+  src: url('/fonts/PTSerif-Regular.ttf') format('ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
