--- a/app/globals.css
+++ b/app/globals.css
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: 'PP Neue Montreal';
-  src: url('/fonts/45ff0666134a754e-s.p.woff2') format('woff2');
+  src: url('/fonts/Montserrat-VariableFont_wght.ttf') format('ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
@@ -20,7 +20,7 @@
 
 @font-face {
   font-family: 'Inter';
-  src: url('/fonts/dd4c3ed54f9a74fa-s.p.woff2') format('woff2');
+  src: url('/fonts/Inter-VariableFont_opsz,wght.ttf') format('ttf');
   font-weight: 400;
   font-style: normal;
   font-display: swap;
